--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -5,13 +5,12 @@ ja:
       contact: "お問い合わせ"
       user: "ユーザー"
     attributes:
-      blog:
+      photo:
         title: "タイトル"
         content: "内容"
-      contact:
         name: "名前"
         email: "メールアドレス"
-        content: "内容"
+        image: "写真"
       user:
         title: "タイトル"
         name: "名前"
